# Mr_Doors_projectN1

./: .env.example  .env.production  .gitignore  Dockerfile  README-Docker.md  README.md  bot_manager.py  docker-compose.prod.yml  docker-compose.yml  env.example  init.sql  main.py  pytest.ini  requirements.txt  start_bot.sh
analytics-dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
analytics-dashboard/src/: App.tsx  main.tsx  styles.css
analytics_service/backend/: Dockerfile  add_test_data.py  alembic.ini  migrate_data.py  migrate_via_api.py  pyproject.toml  requirements.txt  test_connection.py  test_simple_connection.py  test_sqlite_connection.py  test_supabase_connection.py
analytics_service/backend/app/: __init__.py  main.py
analytics_service/backend/app/api/: __init__.py
analytics_service/backend/app/api/routes/: __init__.py  health.py  ingestion.py  requests.py
analytics_service/backend/app/core/: config.py
analytics_service/backend/app/db/: __init__.py  base.py  session.py
analytics_service/backend/app/models/: __init__.py  request_event.py
analytics_service/backend/app/schemas/: __init__.py  events.py  requests.py
analytics_service/backend/app/services/: __init__.py  ingestion.py  requests.py
analytics_service/backend/migrations/: env.py
analytics_service/backend/migrations/versions/: 20240924_0001_create_request_events.py  20250925_0002_fix_enum_case.py
analytics_service/backend/tests/: conftest.py  test_ingestion.py  test_requests.py
nginx/: nginx.conf
tests/: test_extract_numbers.py  test_integration_openai.py
(+20 files in other folders)
