[tool.poetry]
name = "mr-doors-analytics-backend"
version = "0.1.0"
description = "Analytics service backend for Mr Doors"
authors = ["Pavel Allgeon <pavel@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.114.1"
uvicorn = { extras = ["standard"], version = "0.30.3" }
sqlalchemy = "2.0.35"
asyncpg = "0.29.0"
alembic = "1.13.2"
pydantic-settings = "2.4.0"
httpx = "0.27.2"
python-dotenv = "1.0.1"
orjson = "3.10.7"
tenacity = "9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.24.0"
mypy = "1.11.2"
ruff = "0.6.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

